--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,29 +22,42 @@
 }
 
 .left{
-    float:left
+    float:left;
 }
+
+#particle-canvas {
+    width: 100%;
+    height: 100px;
+}
+
 .header{
     width:100%;
-    height:23vh;
-    background-image: url(/assets/webcamplinkstt.png);
-    background-size: 100% 110%;
+    height:12vh;
+    background-color: black;
+    background-size: 100%;
     filter: drop-shadow(1px 2px 2px rgba(0,0,0,.8));
 }
 
- .new{
-     width:12%;
-     height:100%;
-     float:right;
-     margin:1vh 8vh 0 0;
-     color:white;
-     padding-top:1vh ;
- }
- .links{
-    width:12%;
+.header>div{
+    width: 68%;
+    font-size: 35px;
+    text-align: center;
+    display: inline-block;
+    color: white;
+}
+
+.new{
+    width:15%;
     height:100%;
-    float:left;
-    margin:1vh 0 0 8vh;
     color:white;
-    padding-top:1vh ;
+    display: inline-block;
+    text-align: center;
+}
+
+.links{
+    width:15%;
+    height:100%;
+    color:white;
+    display: inline-block;
+    text-align: center;
 }
